Snake game in progress...

--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
       border: .25vmin solid black;
     }
 
-    .food {
+    .apple {
       background-color: hsl(50, 100%, 50%);
       border: .25vmin solid black;
     }
   </style>
   <script src="snake.js" defer ></script>
-  
   <script src="game.js" defer ></script>
+  <script src="input.js" defer ></script>
+  <script src="apple.js" defer ></script>
 </head>
 <body>
   <div id="game-board"></div>
