Adding finger touch event listeners

--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
   </style>
   <script src="snake.js" defer type="module"></script>
   <script src="game.js" defer type="module"></script>
-  <script src="input.js" defer type="module"></script>
+  <!-- <script src="input.js" defer type="module"></script> -->
   <script src="apple.js" defer type="module"></script>
   <script src="grid.js" defer type="module"></script>
+  <script src="inputsTouchMove.js" defer type="module"></script>
 </head>
 
 <body>
